--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://s3.amazonaws.com/repo.commonsware.com" }
     }
 }
 
