--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.eirture.easy">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +20,8 @@
         </activity>
         <activity
             android:name=".edit.view.EditA_"
-            android:theme="@style/AppTheme.LightTheme" />
+            android:theme="@style/AppTheme.LightTheme"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
