--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,15 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
 
     apt "org.androidannotations:androidannotations:$AAVersion"
-    apt "org.androidannotations:otto:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
+    apt "org.androidannotations:otto:$AAVersion"
+    apt "org.androidannotations:ormlite:$AAVersion"
+    compile "org.androidannotations:ormlite-api:$AAVersion"
 
     compile 'com.squareup:otto:1.3.8'
+
+    compile 'com.j256.ormlite:ormlite-core:5.0'
+    compile 'com.j256.ormlite:ormlite-android:5.0'
 
     compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
     compile 'com.jakewharton.rxbinding:rxbinding-appcompat-v7:1.0.0'
@@ -46,6 +51,8 @@ dependencies {
     compile 'com.jakewharton.rxbinding:rxbinding-recyclerview-v7:1.0.0'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.2.3'
+
+    compile 'com.google.guava:guava:20.0'
 
     compile 'com.commonsware.cwac:anddown:0.2.4'
 
