--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,6 @@
 systemProp.http.proxyHost=127.0.0.1
 org.gradle.jvmargs=-Xmx1536m
 systemProp.http.proxyPort=1080
+
+simperiumApp=overload-impedance-b3b
+simperiumKey=ade7235ad1f344cdb540907da25c903d
