--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     compile "org.androidannotations:ormlite-api:$AAVersion"
     compile 'com.squareup:otto:1.3.8'
 
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
     compile 'com.j256.ormlite:ormlite-core:5.0'
     compile 'com.j256.ormlite:ormlite-android:5.0'
 
