--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,8 @@
         <activity
             android:name=".main.view.CheckPasswordA_"
             android:theme="@style/AppTheme.LightTheme" />
+        <activity android:name=".mine.view.NotificationA_" />
+
     </application>
 
 </manifest>
