--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         minSdkVersion 18
         targetSdkVersion 24
         versionCode 1
+        multiDexEnabled true
         versionName "1.0"
     }
     buildTypes {
@@ -29,6 +30,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:appcompat-v7:25.1.0'
     provided 'com.android.support:support-annotations:25.1.0'
     compile 'com.android.support:design:25.1.0'
@@ -48,6 +50,7 @@ dependencies {
     compile 'com.google.guava:guava:20.0'
     compile 'com.commonsware.cwac:anddown:0.2.4'
     compile 'pub.devrel:easypermissions:0.2.1'
+
 
     compile project(':rxcommon')
 
